--- a/FoldingVideoPlusTrivia/app/src/main/res/layout/activity_main.xml
+++ b/FoldingVideoPlusTrivia/app/src/main/res/layout/activity_main.xml
@@ -1,16 +1,15 @@
-<?xml version="1.0" encoding="utf-8"?>
-<!--
+<?xml version="1.0" encoding="utf-8"?><!--
   ~ Copyright (c) Microsoft Corporation. All rights reserved.
   ~  Licensed under the MIT License.
   -->
 <androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:fitsSystemWindows="true"
     android:id="@+id/root"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/black"
+    android:fitsSystemWindows="true"
     app:layoutDescription="@xml/activity_main_scene"
     tools:context=".MainActivity">
 
@@ -19,7 +18,6 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:background="@color/black"
-
         app:layout_constraintBottom_toTopOf="@+id/vertical_guide"
         app:layout_constraintEnd_toStartOf="@+id/horizontal_guide"
         app:layout_constraintStart_toStartOf="parent"
@@ -32,21 +30,23 @@
         android:id="@+id/player_control_view"
         android:layout_width="0dp"
         android:layout_height="100dp"
-        app:layout_constraintStart_toStartOf="@+id/player_view"
-        app:layout_constraintEnd_toStartOf="@+id/chatEnableButton"
-        app:layout_constraintBottom_toBottomOf="@+id/player_view" />
+        app:layout_constraintBottom_toBottomOf="@+id/player_view"
+        app:layout_constraintEnd_toStartOf="@+id/triviaEnableButton"
+        app:layout_constraintStart_toStartOf="@+id/player_view" />
 
     <ImageButton
-        android:id="@+id/chatEnableButton"
+        android:id="@+id/triviaEnableButton"
         android:layout_width="50dp"
         android:layout_height="50dp"
         android:background="@android:color/transparent"
         android:clickable="true"
-        android:src="@drawable/ic_fluent_chat_28_filled"
+        android:contentDescription="@string/open_trivia"
+        android:src="@drawable/ic_fluent_person_question_mark_24_filled"
         android:tint="@color/white"
-        app:layout_constraintStart_toEndOf="@+id/player_control_view"
         app:layout_constraintBottom_toBottomOf="@id/player_view"
-        app:layout_constraintEnd_toEndOf="@id/player_view" />
+        app:layout_constraintEnd_toEndOf="@id/player_view"
+        app:layout_constraintStart_toEndOf="@+id/player_control_view" />
+
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/vertical_guide"
@@ -64,9 +64,8 @@
         app:layout_constraintGuide_end="0dp"
         tools:layout_editor_absoluteX="300dp" />
 
-
     <androidx.fragment.app.FragmentContainerView
-        android:id="@+id/bottom_chat_view"
+        android:id="@+id/bottom_trivia_view"
         android:name="com.example.video_trivia_sample.TriviaFragment"
         android:layout_width="0dp"
         android:layout_height="0dp"
@@ -77,7 +76,7 @@
         app:layout_constraintTop_toBottomOf="@+id/vertical_guide" />
 
     <androidx.fragment.app.FragmentContainerView
-        android:id="@+id/end_chat_view"
+        android:id="@+id/end_trivia_view"
         android:name="com.example.video_trivia_sample.TriviaFragment"
         android:layout_width="0dp"
         android:layout_height="0dp"
