--- a/FoldingVideoPlusTrivia/app/src/main/res/layout/fragment_trivia.xml
+++ b/FoldingVideoPlusTrivia/app/src/main/res/layout/fragment_trivia.xml
@@ -15,10 +15,10 @@
         android:layout_height="1dp"
         android:background="@color/gray"
         android:elevation="1dp"
-        app:layout_constraintTop_toTopOf="@+id/chat_title_view" />
+        app:layout_constraintTop_toTopOf="@+id/trivia_title_view" />
 
     <TextView
-        android:id="@+id/chat_title_view"
+        android:id="@+id/trivia_title_view"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@color/black"
@@ -44,7 +44,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/chat_title_view"
+        app:layout_constraintTop_toBottomOf="@id/trivia_title_view"
         android:orientation="vertical" />
 
 
